@startuml
title MoveCodeBeats - Classes Principais
skinparam classAttributeIconSize 0

package "Dominio" {
  class HandTracker {
    +read(): tuple
    +close(): None
  }
  class MovementProcessor {
    +process(hands): MotionFeatures
  }
  class GestureMapper {
    +map(motion): SoundParameters
  }
  class StrudelPublisher {
    +build_state(params, motion): StrudelState
    +should_publish(state): bool
    +set_selected_profile(id, source, confidence): None
  }
  class PreviewPublisher {
    +build_frame(overlay): PreviewFrame
    +should_publish(): bool
  }
}

package "Backend FastAPI" {
  class StateService {
    +process_frame(frame, hands): list
    +select_profile(id): dict
    +catalog(): list
  }
  class CaptureRuntime {
    +start(): None
    +stop(): None
    +status(): dict
  }
  class SessionService {
    +create(): SessionRecord
    +get(id): SessionRecord
    +select_profile(id, profile): SessionRecord
  }
  class RealtimeHub {
    +connect(session, websocket): None
    +broadcast(event): None
    +publish_from_capture(event): None
  }
  class EventEnvelope {
    +schema_version: str
    +type: str
    +timestamp: float
    +session_id: str
    +data: dict
  }
}

package "Frontend TypeScript" {
  class MoveCodeBeatsApi {
    +getCatalog(): Catalog
    +createSession(): Session
    +selectProfile(session, profile): Session
    +openStream(session, handlers): WebSocket
  }
  class PatternBuilder {
    +buildPatternCode(state): string
    +buildPatternExpression(state, runtime): PatternExpression
  }
  class StrudelEngine {
    +activate(): Promise
    +update(state): void
    +stop(): void
    +dispose(): void
  }
}

CaptureRuntime *-- HandTracker
CaptureRuntime --> StateService
StateService *-- MovementProcessor
StateService *-- GestureMapper
StateService *-- StrudelPublisher
StateService *-- PreviewPublisher
CaptureRuntime --> RealtimeHub
RealtimeHub --> EventEnvelope
SessionService --> StateService
MoveCodeBeatsApi --> EventEnvelope
MoveCodeBeatsApi --> PatternBuilder
PatternBuilder --> StrudelEngine
@enduml
